--- a/andersreizen/src/app/app.component.html
+++ b/andersreizen/src/app/app.component.html
@@ -1,32 +1,1 @@
-<div class="container-fluid home ">
-    <div class="row">
-    <div class="col">
-        <div class="row">
-        <div class="col-2"></div>
-        <div class="col">
-            <div class="logo">
-                <img src="assets/anders_reizen.png">
-            </div>
-            <div class="form-container">
-                <h1 class="and-h1 pb-4">Welkom,</h1>
-                <div>
-                    <form>
-                        <app-input-field label="Email" placeholder="sample@some.com" type="email"></app-input-field>
-                        <app-input-field label="Password" placeholder="*******" type="password"></app-input-field>
-                        <div class="mt-3">
-                            <app-button type="opec" text="Inloggen"></app-button>
-                        </div>
-                        <div class="mt-3">
-                            <app-button text="Registreren"></app-button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        </div>
-    </div>
-    <div class="col m-0 p-0">
-    <div class="full-wall"></div>
-    </div>
-    </div>
-</div>
+<router-outlet></router-outlet>
