--- a/andersreizen/src/styles.scss
+++ b/andersreizen/src/styles.scss
@@ -72,8 +72,27 @@
   font-size: 40px;
   color: #0B3C82;
 }
+.and-h1-normal {
+  font-family: lato-regular;
+  font-size: 40px;
+}
+.and-h2-normal {
+  font-family: lato-regular;
+  font-size: 20px;
+}
+
+.inline-fields {
+  display: flex;
+  app-input-field {
+    margin-right: 13px;
+    width: 30%
+  }
+}
+
 
 body{
+  background: #FAFAFA;
   padding: 0;
   margin: 0;
+  font-family: lato-regular;
 }
