--- a/andersreizen/src/app/dashboard/dashboard.component.html
+++ b/andersreizen/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
                 <span class="heading">Anders Reizen CO2 meting</span>
             </div>
             <div class="col-1">
-                <span class="heading">Uitloggen</span>
+                <span class="heading" (click)="logout()" style="cursor: pointer;color: #676767">Uitloggen</span>
             </div>
         </div>
     </header>
