--- a/andersreizen/src/app/button/button.component.html
+++ b/andersreizen/src/app/button/button.component.html
@@ -1,1 +1,3 @@
-<button [ngClass]="type === 'opec' ? 'opec' : 'transparent'">{{text}}</button>
+
+<button [ngClass]="type === 'opec' ? 'opec' : 'transparent'" type="submit" [disabled]="disabled">{{text}}</button>
+
