--- a/andersreizen/src/app/button/button.component.scss
+++ b/andersreizen/src/app/button/button.component.scss
@@ -17,3 +17,8 @@ button {
   border: 2px solid #0B3C82;
   border-radius: 4px;
 }
+
+button:disabled {
+  background: #DDDDDD;
+  border: thin solid #9F9F9F;
+}
