--- a/andersreizen/src/app/content-panel/content-panel.component.html
+++ b/andersreizen/src/app/content-panel/content-panel.component.html
@@ -1,4 +1,4 @@
-<div class="title-block">
+<div [ngClass]="fullTitleBar ? 'full-title-bar': 'title-block'">
     {{title}}
 </div>
 <div class="content-block">
