--- a/andersreizen/src/app/tab-panel/tab-panel.component.html
+++ b/andersreizen/src/app/tab-panel/tab-panel.component.html
@@ -1,10 +1,20 @@
 <div class="row">
     <div class="tab-container">
-    <li class="tab">1. Zakelijk reizen</li>
-    <li class="tab">1. 2. Woon-werkverkeer - vaste vergoeding</li>
+        <li [ngClass]="tab === 0 ? 'selected tab':'tab'" (click)="tab = 0">1. Zakelijk reizen</li>
+        <li [ngClass]="tab === 1 ? 'selected tab':'tab'" (click)="tab = 1">2. Woon-werkverkeer - vaste vergoeding</li>
+        <li [ngClass]="tab === 2 ? 'selected tab':'tab'" (click)="tab = 2">3. Declaraties</li>
     </div>
     <div class="border-bottom"></div>
 </div>
 <div class="row">
-    <ng-content></ng-content>
+    <div *ngIf="tab === 0">
+        <ng-content select="[data-tab=0]"></ng-content>
+    </div>
+    <div *ngIf="tab === 1">
+        <ng-content select="[data-tab=1]"></ng-content>
+    </div>
+    <div *ngIf="tab === 2">
+        <ng-content select="[data-tab=2]"></ng-content>
+    </div>
+
 </div>
