--- a/andersreizen/src/app/tab-panel/tab-panel.component.scss
+++ b/andersreizen/src/app/tab-panel/tab-panel.component.scss
@@ -5,6 +5,7 @@
   border-bottom: 2px solid #DDDDDD;;
 
   .tab {
+    cursor: pointer;
     list-style: none;
     display: inline-block;
     padding: 15px;
@@ -16,5 +17,11 @@
     color: #1C7CD5;
     font-family: lato-regular;
     font-size: 14px;
+  }
+
+  .selected {
+    background: #0B3C82 0% 0% no-repeat padding-box;
+    border: 1px solid #DDDDDD;
+    color: #fff;
   }
 }
