--- a/andersreizen/src/app/separator/separator.component.html
+++ b/andersreizen/src/app/separator/separator.component.html
@@ -1,4 +1,4 @@
-<div class="separator-container">
+<div class="separator-container col-12">
 <span class="line"></span>
 <span class="text">Of</span>
 <span class="line"></span>
