--- a/andersreizen/src/app/left-nav/left-nav.component.scss
+++ b/andersreizen/src/app/left-nav/left-nav.component.scss
@@ -1,11 +1,29 @@
 .full-height {
   height: 100%;
+  min-height: 100vh;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 6px #00000029;
 
 }
 .menu-container{
   padding-top: 50px;
+}
+.footer-link-container{
+  height: 50px;
+  width: 100%;
+  display: block;
+  bottom: 0;
+  position: absolute;
+    a {
+      color:#0B3C82;
+      padding: 20px;
+      padding-top: 5px;
+      display: flex;
+
+      img {
+        margin-left: 10px;
+      }
+    }
 }
 .parent {
   min-height: 100px;
